<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayoutFilaUno"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFilaDos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonOpBorrar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonOp_FondoAlterno"
            android:onClick="onClick"
            android:text="@string/buttonOpBorrar_Text"
            android:textColor="@color/buttonOp_TextoAlterno"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOpMasMenos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonOp_FondoAlterno"
            android:onClick="onClick"
            android:text="@string/buttonOpMasmenos_Text"
            android:textColor="@color/buttonOp_TextoAlterno"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOpExp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/buttonOpExp_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOpDiv"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/buttonOpDiv_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFilaTres"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDigSiete"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:onClick="onClick"
            android:text="@string/buttonDigSiete_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigOcho"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:onClick="onClick"
            android:text="@string/buttonDigOcho_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigNueve"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:onClick="onClick"
            android:text="@string/buttonDigNueve_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOpMult"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/buttonOpMult_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFilaCuatro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDigCuatro"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:onClick="onClick"
            android:text="@string/buttonDigCuatro_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigCinco"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:onClick="onClick"
            android:text="@string/buttonDigCinco_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigSeis"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:onClick="onClick"
            android:text="@string/buttonDigSeis_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOpMenos"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/buttonOpMenos_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFilaCinco"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonDigUno"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:onClick="onClick"
            android:text="@string/buttonDigUno_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigDos"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:onClick="onClick"
            android:text="@string/buttonDigDos_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigTres"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:onClick="onClick"
            android:text="@string/buttonDigTres_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOpSuma"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/buttonOpSuma_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFilaSeis"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDigCero"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/buttonDig_Fondo"
            android:onClick="onClick"
            android:text="@string/buttonDigCero_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigPunto"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:onClick="onClick"
            android:text="@string/buttonDigPunto_Text"

            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigIgual"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/buttonOpIgual_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>