<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bloque3Fragment">

    <LinearLayout
        android:id="@+id/linearLayoutFilaCuatro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDigCuatro"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:text="@string/buttonDigCuatro_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigCinco"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:text="@string/buttonDigCinco_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigSeis"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:text="@string/buttonDigSeis_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOpMenos"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/buttonOpMenos_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
</FrameLayout>