<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bloque4Fragment">

    <LinearLayout
        android:id="@+id/linearLayoutFilaCinco"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonDigUno"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:text="@string/buttonDigUno_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigDos"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:text="@string/buttonDigDos_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigTres"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:text="@string/buttonDigTres_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOpSuma"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/buttonOpSuma_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>