<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bloque2Fragment">

    <LinearLayout
        android:id="@+id/linearLayoutFilaTres"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDigSiete"
            android:onClick="onClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:text="@string/buttonDigSiete_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigOcho"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:text="@string/buttonDigOcho_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:onClick="onClick"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDigNueve"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonDig_Fondo"
            android:text="@string/buttonDigNueve_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:onClick="onClick"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOpMult"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/buttonOpMult_Text"
            android:textColor="@color/buttonDig_Texto"
            android:textSize="24sp"
            android:onClick="onClick"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>